@@ -2,6 +2,8 @@ Revision history for MooseX-Extended
 
 {{$NEXT}}
 
+          - `field` is now only lazy if there's a builder or default.
+
 0.21      2022-06-07 19:17:30 CEST
 
           - A field's `init_arg` can now begin with an underscore. (thanks,
